feat(docker): use docker login
Instead of using a separat 1p item the config will be generated

--- a/home/private_dot_docker/config.json.tmpl
+++ b/home/private_dot_docker/config.json.tmpl
@@ -1,1 +1,7 @@
-{{ onepasswordRead "op://Personal/dockerconfig/config.json" }}
+{
+  "auths": {
+    "endpoint": {
+      "auth": "{{- printf "%s:%s" (onepasswordRead "op://Personal/Docker/username" | trim) (onepasswordRead "op://Personal/Docker/password" | trim) | b64enc -}}"
+    }
+  }
+}
