--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -1,4 +1,17 @@
+[commit]
+  gpgsign = true
+
+[core]
+  autocrlf = false
+  eol = lf
+
+[gpg]
+  program = /opt/homebrew/bin/gpg
+
+[init]
+  defaultBranch = main
+
 [user]
-	name = {{ .name }}
-	email = {{ .email }}
-	signingkey = {{- onepasswordRead "op://Personal/gpg/signingkey" -}}
+  name = {{ .name }}
+  email = {{ .email }}
+  signingKey = {{ onepasswordRead "op://Personal/gpg/signingkey" }}
