--- a/home/dot_exports.tmpl
+++ b/home/dot_exports.tmpl
@@ -1,6 +1,9 @@
 # Add `~/bin` to the `$PATH`
 export PATH="$HOME/bin:$PATH";
 
+# gpg
+export GPG_TTY=$(tty)
+
 {{- if eq .chezmoi.os "darwin" }}
 
 # macOS-specific code
