feat(alias): add k8s type aliases

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -21,6 +21,9 @@ alias dc=docker-compose
 alias g="git"
 alias h="helm"
 alias k="kubectl"
+alias kgd="kubectl get deployment"
+alias kgp="kubectl get pod"
+alias kgs="kubectl get service"
 alias kctx="kubectx"
 alias kns="kubens"
 {{- if lookPath "podman" }}
