feat(aliases):; add ll, cdtemp

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -8,6 +8,10 @@ alias .....="cd ../../../.."
 alias ~="cd ~" # `cd` is probably faster to type though
 alias -- -="cd -"
 
+alias ll="ls -la"
+alias cdtmp="cd $(mktemp -d)"
+alias cdtemp="cd $(mktemp -d)"
+
 alias {{ .github.user }}="cd ~/github.com/{{ .github.user }}"
 alias tm="cd ~/github.com/taskmedia"
 
