fix(brew): use brew install function for gpg2

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -21,7 +21,7 @@ brew_install_cask() {
 
 # yubikey
 brew_install gnupg
-brew install gpg2
+brew_install gpg2
 brew_install yubikey-personalization
 brew_install hopenpgp-tools
 brew_install ykman
