feat(zsh): use starship
see: https://starship.rs

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -19,6 +19,11 @@ brew_install_cask() {
 {{- if eq .chezmoi.os "darwin" }}
 # macOS-specific code
 
+# zsh
+brew_install starship
+brew tap homebrew/cask-fonts
+brew_install_cask font-Hack-nerd-font
+
 # yubikey
 brew_install gnupg
 brew_install gpg2
