feat(aliases): add finder

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -12,6 +12,8 @@ alias ll="ls -la"
 alias cdtmp="cd $(mktemp -d)"
 alias cdtemp="cd $(mktemp -d)"
 
+alias finder="open ."
+
 alias {{ .github.user }}="cd ~/github.com/{{ .github.user }}"
 alias tm="cd ~/github.com/taskmedia"
 
