feat(aliases): add mb aliases

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -17,6 +17,10 @@ alias finder="open ."
 alias {{ .github.user }}="cd ~/github.com/{{ .github.user }}"
 alias tm="cd ~/github.com/taskmedia"
 
+alias mb="cd ~/git.daimler.com"
+alias sre="cd ~/git.daimler.com/sre"
+alias sree="cd ~/git.daimler.com/sre-enable"
+
 # applications
 {{- if lookPath "docker" }}
 alias d=docker
