--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -28,7 +28,12 @@ alias d=docker
 {{- if lookPath "docker-compose" }}
 alias dc=docker-compose
 {{- end }}
+
 alias g="git"
+alias ga="git add"
+alias gc="git commit"
+alias gd="git diff"
+
 alias h="helm"
 alias k="kubectl"
 alias kgd="kubectl get deployment"
