--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -33,6 +33,7 @@ alias g="git"
 alias ga="git add"
 alias gc="git commit"
 alias gd="git diff"
+alias gdc="git diff --cached"
 
 alias h="helm"
 alias k="kubectl"
