--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -34,6 +34,7 @@ alias ga="git add"
 alias gc="git commit"
 alias gd="git diff"
 alias gdc="git diff --cached"
+alias gl="git log --all --decorate --oneline --graph"
 
 alias h="helm"
 alias k="kubectl"
