feat(aliases): add kube get

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -30,6 +30,7 @@ alias dc=docker-compose
 {{- end }}
 alias h="helm"
 alias k="kubectl"
+alias kg="kubectl get"
 alias kgd="kubectl get deployment"
 alias kgp="kubectl get pod"
 alias kgs="kubectl get service"
