feat(aliases): update git aliases (add,restore,status)

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -43,6 +43,8 @@ alias p="podman"
 # git
 alias g="git"
 alias ga="git add"
+alias gap="git add -p"
+alias gap.="git add -p ."
 alias gc="git commit"
 alias gcmsg="git commit -m"
 alias gcundo="git reset --soft HEAD~1" # Undoing latest commit
@@ -56,12 +58,14 @@ alias gl="git log --all --decorate --oneline --graph"
 alias gpull="git pull"
 alias gpush="git push"
 alias gpushf="git push --force"
-alias gr="git remote"
-alias gra="git remote add"
+alias gr="git restore"
+alias grs="git restore --staged"
+alias grs.="git restore --staged ."
 alias grb="git rebase"
 alias grbi="git rebase -i"
 alias grbm="git rebase $(git_main_branch)"
 alias grbom="git rebase origin/$(git_main_branch)"
+alias gs="git status"
 alias gts="git tag -s"
 
 # Always enable colored `grep` output
