chore(aliases): use g instead of git aliases
This will help for `you-should-use` detection

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -42,31 +42,31 @@ alias p="podman"
 
 # git
 alias g="git"
-alias ga="git add"
-alias gap="git add -p"
-alias gap.="git add -p ."
-alias gc="git commit"
-alias gcmsg="git commit -m"
-alias gcundo="git reset --soft HEAD~1" # Undoing latest commit
-alias gco="git checkout"
-alias gcob="git checkout -b"
-alias gcp='git cherry-pick'
-alias gd="git diff"
-alias gdc="git diff --cached"
-alias gds="git diff --staged"
-alias gl="git log --all --decorate --oneline --graph"
-alias gpull="git pull"
-alias gpush="git push"
-alias gpushf="git push --force"
-alias gr="git restore"
-alias grs="git restore --staged"
-alias grs.="git restore --staged ."
-alias grb="git rebase"
-alias grbi="git rebase -i"
-alias grbm="git rebase $(git_main_branch)"
-alias grbom="git rebase origin/$(git_main_branch)"
-alias gs="git status"
-alias gts="git tag -s"
+alias ga="g add"
+alias gap="g add -p"
+alias gap.="g add -p ."
+alias gc="g commit"
+alias gcmsg="g commit -m"
+alias gcundo="g reset --soft HEAD~1" # Undoing latest commit
+alias gco="g checkout"
+alias gcob="g checkout -b"
+alias gcp='g cherry-pick'
+alias gd="g diff"
+alias gdc="g diff --cached"
+alias gds="g diff --staged"
+alias gl="g log --all --decorate --oneline --graph"
+alias gpull="g pull"
+alias gpush="g push"
+alias gpushf="g push --force"
+alias gr="g restore"
+alias grs="g restore --staged"
+alias grs.="g restore --staged ."
+alias grb="g rebase"
+alias grbi="g rebase -i"
+alias grbm="g rebase $(git_main_branch)"
+alias grbom="g rebase origin/$(git_main_branch)"
+alias gs="g status"
+alias gts="g tag -s"
 
 # Always enable colored `grep` output
 # Note: `GREP_OPTIONS="--color=auto"` is deprecated, hence the alias usage.
