feat(aliases): add gp for git push

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -55,6 +55,7 @@ alias gd="g diff"
 alias gdc="g diff --cached"
 alias gds="g diff --staged"
 alias gl="g log --all --decorate --oneline --graph"
+alias gp="g push"
 alias gpull="g pull"
 alias gpush="g push"
 alias gpushf="g push --force"
