feat(aliases): add gca, gsh

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -46,6 +46,7 @@ alias ga="g add"
 alias gap="g add -p"
 alias gap.="g add -p ."
 alias gc="g commit"
+alias gca="g commit --amend --date='$(date)' --no-edit"
 alias gcmsg="g commit -m"
 alias gcundo="g reset --soft HEAD~1" # Undoing latest commit
 alias gco="g checkout"
@@ -67,6 +68,7 @@ alias grbi="g rebase -i"
 alias grbm="g rebase $(git_main_branch)"
 alias grbom="g rebase origin/$(git_main_branch)"
 alias gs="g status"
+alias gsh="g show HEAD"
 alias gts="g tag -s"
 
 # Always enable colored `grep` output
