feat(brew): add git-lfs, mattermost, tree, yq

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -37,6 +37,7 @@ brew_install_cask gpg-suite-no-mail # gpg
 # programming
 brew_install gh # GitHub cli
 brew_install git # version control
+brew_install git-lfs # version control large file storage
 brew_install go # golang
 # brew_install nvm # node package manager
 brew_install_cask postman # API tool
@@ -63,7 +64,10 @@ brew_install podman # container engine
 brew_install_cask 1password-cli # password manager cli
 # brew_install ansible
 brew_install_cask google-chrome # browser
+brew_install_cask mattermost # chat client
 brew_install_cask notion # note tool
+brew_install tree # directory listing
+brew_install yq # yaml processer
 brew_install_cask whatsapp # chat client
 
 {{- end }}
