feat(brew): add brew cleanup

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -70,4 +70,7 @@ brew_install tree # directory listing
 brew_install yq # yaml processer
 brew_install_cask whatsapp # chat client
 
+# Remove outdated versions
+brew cleanup
+
 {{- end }}
