feat(brew): add firefox

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -63,6 +63,7 @@ brew_install podman # container engine
 # others
 brew_install_cask 1password-cli # password manager cli
 # brew_install ansible
+brew_install_cask firefox
 brew_install_cask google-chrome # browser
 brew_install_cask mattermost # chat client
 brew_install_cask notion # note tool
