--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -62,12 +62,15 @@ brew_install podman # container engine
 
 # others
 brew_install_cask 1password-cli # password manager cli
-# brew_install ansible
-brew_install_cask firefox
+# brew_install ansible # config automation
+brew_install_cask firefox # browser
 brew_install_cask google-chrome # browser
+brew_install_cask keepassxc # password manager
 brew_install_cask mattermost # chat client
+# brew_install_cask microsoft-remote-desktop # remote desktop for windows
 brew_install_cask notion # note tool
 brew_install tree # directory listing
+brew_install vault # password manager cli
 brew_install yq # yaml processer
 brew_install_cask whatsapp # chat client
 
