--- a/home/dot_exports.tmpl
+++ b/home/dot_exports.tmpl
@@ -3,5 +3,6 @@
 # Make vim the default editor.
 export EDITOR='vim';
 
-# gpg
+# Avoid issues with `gpg` as installed via Homebrew.
+# https://stackoverflow.com/a/42265848/96656
 export GPG_TTY=$(tty);
