feat(exports): add locale (LANG, LANGUAGE)

--- a/home/dot_exports.tmpl
+++ b/home/dot_exports.tmpl
@@ -6,3 +6,7 @@ export EDITOR='vim';
 # Avoid issues with `gpg` as installed via Homebrew.
 # https://stackoverflow.com/a/42265848/96656
 export GPG_TTY=$(tty);
+
+# locale
+export LANG="en-US.UTF-8";
+export LANGUAGE=en_US;
