feat(exports): add manpager preferences

--- a/home/dot_exports.tmpl
+++ b/home/dot_exports.tmpl
@@ -17,3 +17,6 @@ export HISTFILESIZE="${HISTSIZE}";
 
 # Omit duplicates and commands that begin with a space from history.
 export HISTCONTROL='ignoreboth';
+
+# Don’t clear the screen after quitting a manual page.
+export MANPAGER='less -X';
