feat(brew): add k3d

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -54,6 +54,7 @@ brew_install_cask rectangle # window manager
 # brew_install argocd # deployment cli tool
 # brew_install docker # container engine
 brew_install helm # kubernetes package manager
+brew_install k3d # kubernetes locally
 brew_install k9s # kubernetes cli manager
 brew_install kubernetes-cli # kubernetes cli
 brew_install kubectx # kubernetes context and namespace tool
