--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -54,11 +54,11 @@ brew_install_cask rectangle # window manager
 # brew_install argocd # deployment cli tool
 # brew_install docker # container engine
 brew_install helm # kubernetes package manager
-brew_install k3d # kubernetes locally
 brew_install k9s # kubernetes cli manager
 brew_install kubernetes-cli # kubernetes cli
 brew_install kubectx # kubernetes context and namespace tool
 # brew_install kubeseal # k8s sealed-secrets cli
+brew_install brew minikube # kubernetes locally
 brew_install podman # container engine
 
 # others
