feat(brew): add argo rollouts cli

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -52,6 +52,7 @@ brew_install_cask rectangle # window manager
 
 # kubernetes
 # brew_install argocd # deployment cli tool
+# brew_install argoproj/tap/kubectl-argo-rollouts
 # brew_install docker # container engine
 brew_install helm # kubernetes package manager
 brew_install k9s # kubernetes cli manager
