feat(helm): add watch

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -49,6 +49,7 @@ brew_install_cask visual-studio-code
 brew_install alt-tab # window manager
 brew_install_cask maccy # clipboard manager
 brew_install_cask rectangle # window manager
+brew_install watch # periodically run program
 
 # kubernetes
 # brew_install argocd # deployment cli tool
