feat(brew): add nvm / npm

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -39,7 +39,7 @@ brew_install gh # GitHub cli
 brew_install git # version control
 brew_install git-lfs # version control large file storage
 brew_install go # golang
-# brew_install nvm # node package manager
+brew_install nvm # node package manager
 brew_install_cask postman # API tool
 # brew_install openjdk # java
 brew_install_cask visual-studio-code
