--- a/home/dot_exports.tmpl
+++ b/home/dot_exports.tmpl
@@ -23,3 +23,10 @@ export HISTCONTROL='ignoreboth';
 
 # Don’t clear the screen after quitting a manual page.
 export MANPAGER='less -X';
+
+# nvm
+export NVM_DIR="$HOME/.nvm"
+# This loads nvm
+[ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"
+# This loads nvm bash_completion
+[ -s "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm"
