feat(brew): add gfind to macOS
The find does not support -printf on macOS

see: https://stackoverflow.com/a/32293551/7271964

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -68,6 +68,7 @@ brew_install_cask 1password-cli # password manager cli
 # brew_install ansible # config automation
 brew_install_cask firefox # browser
 brew_install_cask google-chrome # browser
+brew_install findutils # find utils
 brew_install_cask keepassxc # password manager
 brew_install_cask mattermost # chat client
 # brew_install_cask microsoft-remote-desktop # remote desktop for windows
