feat(brew): add cosign cli

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -54,6 +54,7 @@ brew_install watch # periodically run program
 # kubernetes
 # brew_install argocd # deployment cli tool
 # brew_install argoproj/tap/kubectl-argo-rollouts
+brew_install cosign # container signing
 # brew_install docker # container engine
 brew_install helm # kubernetes package manager
 brew_install k9s # kubernetes cli manager
