feat(alias): add jekyll

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -44,6 +44,7 @@ alias kns="kubens"
 {{- if lookPath "podman" }}
 alias p="podman"
 {{- end }}
+alias jekyll="p run --name jekyll --rm -v $(pwd):/site -p 4000:4000 bretfisher/jekyll-serve"
 
 # git
 alias g="git"
