--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -43,6 +43,9 @@ alias kctx="kubectx"
 alias kns="kubens"
 {{- if lookPath "podman" }}
 alias p="podman"
+# mount HOME directory into VM to ensure volume can be mounted
+# see: https://medium.com/@butkovic/favoring-podman-over-docker-desktop-33368e031ba0
+alias pmi="p machine init -v $HOME:$HOME"
 {{- end }}
 alias jekyll="p run --name jekyll --rm -v $(pwd):/site -p 4000:4000 bretfisher/jekyll-serve"
 
