--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -67,6 +67,7 @@ brew_install podman # container engine
 # others
 brew_install_cask 1password-cli # password manager cli
 # brew_install ansible # config automation
+brew_install_cask elgato-stream-deck # additional HotKeys
 brew_install_cask firefox # browser
 brew_install_cask google-chrome # browser
 brew_install findutils # find utils
