--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -45,7 +45,7 @@ alias kns="kubens"
 alias p="podman"
 # mount HOME directory into VM to ensure volume can be mounted
 # see: https://medium.com/@butkovic/favoring-podman-over-docker-desktop-33368e031ba0
-alias pmi="p machine init -v $HOME:$HOME"
+alias pmi="p machine init --cpus 4 --memory 8192 --rootful -v $HOME:$HOME"
 {{- end }}
 alias jekyll="p run --name jekyll --rm -v $(pwd):/site -p 4000:4000 bretfisher/jekyll-serve"
 
