feat(alias): add ga.

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -52,6 +52,7 @@ alias jekyll="p run --name jekyll --rm -v $(pwd):/site -p 4000:4000 bretfisher/j
 # git
 alias g="git"
 alias ga="g add"
+alias ga.="g add ."
 alias gap="g add -p"
 alias gap.="g add -p ."
 alias gc="g commit"
