chore(aliases): change mb dir

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -75,6 +75,7 @@ brew_install_cask keepassxc # password manager
 brew_install_cask mattermost # chat client
 # brew_install_cask microsoft-remote-desktop # remote desktop for windows
 brew_install_cask notion # note tool
+brew_install_cask obsidian # note tool using markdown
 brew_install plantuml # diagram draw tool
 brew_install tree # directory listing
 brew_install vault # password manager cli
