--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -22,7 +22,7 @@ alias finder="open ."
 alias {{ .github.user }}="cd ~/github.com/{{ .github.user }}"
 alias tm="cd ~/github.com/taskmedia"
 
-alias mb="cd ~/git.daimler.com"
+alias mb="cd ~/git.i.mb.com"
 alias sre="cd ~/git.daimler.com/sre"
 alias sree="cd ~/git.daimler.com/sre-enable"
 
