chore: add gcom alias

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -61,6 +61,7 @@ alias gcmsg="g commit -m"
 alias gcundo="g reset --soft HEAD~1" # Undoing latest commit
 alias gco="g checkout"
 alias gcob="g checkout -b"
+alias gcom="gco main"
 alias gcp='g cherry-pick'
 alias gd="g diff"
 alias gdc="g diff --cached"
