chore(alias): add "code ."

--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -27,6 +27,7 @@ alias sre="cd ~/git.daimler.com/sre"
 alias sree="cd ~/git.daimler.com/sre-enable"
 
 # applications
+alias c="code ."
 {{- if lookPath "docker" }}
 alias d=docker
 {{- end }}
