--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -1,9 +1,11 @@
 {{ $name := promptString "Name" "Marco Lecheler" -}}
 {{ $email := promptString "Email address" "16336640+fty4@users.noreply.github.com" }}
 {{ $githubUser := promptString "GitHub username" "fty4" -}}
+{{ $githubHost := promptString "GitHub default CLI host" "github.com" -}}
 
 data:
   name: {{ $name | quote }}
   email: {{ $email | quote }}
   github:
     user: {{ $githubUser | quote }}
+    host: {{ $githubHost | quote }}
