fix: update k9s macOS configfile path

--- a/home/.chezmoiscripts/run_onchange_after_k9s.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_k9s.bash.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 {{- if eq .chezmoi.os "darwin" }}
-CONFIGFILE="${HOME}/Library/Application Support/k9s"
+CONFIGFILE="${HOME}/Library/Application Support/k9s/config.yaml"
 {{ else if eq .chezmoi.os "linux" }}
 CONFIGFILE="${HOME}/.config/k9s"
 {{- end }}
