chore(brew): disable some installations

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -62,12 +62,12 @@ brew_install kubernetes-cli # kubernetes cli
 brew_install kubectx # kubernetes context and namespace tool
 # brew_install kubeseal # k8s sealed-secrets cli
 brew_install brew minikube # kubernetes locally
-brew_install podman # container engine
+# brew_install podman # container engine
 
 # others
 brew_install_cask 1password-cli # password manager cli
 # brew_install ansible # config automation
-brew_install_cask elgato-stream-deck # additional HotKeys
+# brew_install_cask elgato-stream-deck # additional HotKeys
 brew_install_cask firefox # browser
 brew_install_cask google-chrome # browser
 brew_install findutils # find utils
@@ -76,9 +76,9 @@ brew_install_cask mattermost # chat client
 # brew_install_cask microsoft-remote-desktop # remote desktop for windows
 brew_install_cask notion # note tool
 brew_install_cask obsidian # note tool using markdown
-brew_install plantuml # diagram draw tool
+# brew_install plantuml # diagram draw tool
 brew_install tree # directory listing
-brew_install vault # password manager cli
+# brew_install vault # password manager cli
 brew_install yq # yaml processer
 brew_install_cask whatsapp # chat client
 
