--- a/home/.chezmoiscripts/run_onchange_after_gpgagent.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_gpgagent.bash.tmpl
@@ -3,6 +3,6 @@
 
 # configure gpg agent for yubikey
 # TODO: maybe not idempotent
-launchctl load $HOME/Library/LaunchAgents/gnupg.gpg-agent.plist
-launchctl load $HOME/Library/LaunchAgents/gnupg.gpg-agent-symlink.plist
+# launchctl load $HOME/Library/LaunchAgents/gnupg.gpg-agent.plist
+# launchctl load $HOME/Library/LaunchAgents/gnupg.gpg-agent-symlink.plist
 {{- end }}
