fix: ensure bash is in first line; only load gpgagent if not already loaded

--- a/home/.chezmoiscripts/run_onchange_after_gpgagent.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_gpgagent.bash.tmpl
@@ -1,8 +1,13 @@
-{{- if eq .chezmoi.os "darwin" }}
 #!/bin/bash
 
+{{- if eq .chezmoi.os "darwin" }}
+
 # configure gpg agent for yubikey
-# TODO: maybe not idempotent
-# launchctl load $HOME/Library/LaunchAgents/gnupg.gpg-agent.plist
-# launchctl load $HOME/Library/LaunchAgents/gnupg.gpg-agent-symlink.plist
+
+
+if ! launchctl list | grep -q gnupg.gpg-agent; then
+	echo "gnupg agents are not yet loaded"
+	launchctl load $HOME/Library/LaunchAgents/gnupg.gpg-agent.plist
+	launchctl load $HOME/Library/LaunchAgents/gnupg.gpg-agent-symlink.plist
+fi
 {{- end }}
