chore: add cyberduck to brew

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -80,6 +80,7 @@ brew_install tree # directory listing
 # brew_install vault # password manager cli
 brew_install yq # yaml processer
 brew_install_cask whatsapp # chat client
+brew_install_cask cyberduck # ftp
 
 # Remove outdated versions
 brew cleanup
