chore: add spotify cask

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -81,6 +81,7 @@ brew_install tree # directory listing
 brew_install yq # yaml processer
 brew_install_cask whatsapp # chat client
 brew_install_cask cyberduck # ftp
+brew_install_cask spotify # music
 
 # Remove outdated versions
 brew cleanup
