fix: remove brew keyword from minikube install

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -60,7 +60,7 @@ brew_install k9s # kubernetes cli manager
 brew_install kubernetes-cli # kubernetes cli
 brew_install kubectx # kubernetes context and namespace tool
 # brew_install kubeseal # k8s sealed-secrets cli
-brew_install brew minikube # kubernetes locally
+brew_install minikube # kubernetes locally
 
 # others
 brew_install_cask 1password-cli # password manager cli
