--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -39,6 +39,7 @@ alias kgp="kubectl get pod"
 alias kgs="kubectl get service"
 alias kctx="kubectx"
 alias kns="kubens"
+alias mks="minikube start --driver=docker --memory 32768 --cpus 8"
 alias jekyll="p run --name jekyll --rm -v $(pwd):/site -p 4000:4000 bretfisher/jekyll-serve"
 
 # git
