--- a/home/dot_exports.tmpl
+++ b/home/dot_exports.tmpl
@@ -35,3 +35,5 @@ export NVM_DIR="$HOME/.nvm"
 
 # GitHub cli
 export GH_HOST={{ .github.host }}
+
+export ANSIBLE_VAULT_PASSWORD_FILE=~/.ansible/vaultpw
