chore: add terraform alias

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -66,6 +66,7 @@ brew_install minikube # kubernetes locally
 # others
 brew_install_cask 1password-cli # password manager cli
 # brew_install ansible # config automation
+# brew_install terraform # iaas automation
 # brew_install_cask elgato-stream-deck # additional HotKeys
 brew_install_cask firefox # browser
 brew_install_cask google-chrome # browser
