chore(git): ignorecase false

--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -5,6 +5,7 @@
         autocrlf = false
         eol = lf
         excludesFile = ~/.gitignore
+        ignorecase = false
 
 [gpg]
         program = /opt/homebrew/bin/gpg
