chore(exports): set aws default region to eu-central-1

--- a/home/dot_exports.tmpl
+++ b/home/dot_exports.tmpl
@@ -37,3 +37,6 @@ export NVM_DIR="$HOME/.nvm"
 export GH_HOST={{ .github.host }}
 
 export ANSIBLE_VAULT_PASSWORD_FILE=~/.ansible/vaultpw
+
+# AWS
+export AWS_DEFAULT_REGION="eu-central-1"
