chore: add font-fira-code-nerd-font

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -22,6 +22,7 @@ brew_install_cask() {
 # zsh
 brew_install starship # shell prompt
 brew_install_cask font-Hack-nerd-font # fonts for terminal
+brew_install_cask font-fira-code-nerd-font
 
 # yubikey
 brew_install gnupg # gpg
