--- a/home/dot_aliases.tmpl
+++ b/home/dot_aliases.tmpl
@@ -81,6 +81,7 @@ alias gts="g tag -s"
 alias grep='grep --color=auto'
 alias fgrep='fgrep --color=auto'
 alias egrep='egrep --color=auto'
+alias grephighlight="grep --color=always -e "^" -e"
 
 # Enable aliases to be sudo’ed
 alias sudo='sudo '
