chore: replace Postman with Bruno

--- a/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_brew.bash.tmpl
@@ -42,7 +42,7 @@ brew_install go # golang
 brew_install nvm # node package manager
 brew_install go-task # task runner
 brew_install yarn # javascript package manager
-brew_install_cask postman # API tool
+brew_install_cask bruno # API tool (postman alternative)
 # brew_install openjdk # java
 brew_install_cask visual-studio-code
 # brew_install yarn # javascript package manager
